# chord_conductor

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  scratch.ipynb
proto/: node.proto
src/: client_handler.rs  main.rs  node.rs  sim.rs
src/conductor/: main.rs  sim.rs
src/node/: data_manager.rs  main.rs  predecessor.rs  successor.rs
