[package]
name = "chord_dht"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/node/main.rs"

[dependencies]
bytes = "1.7.1"
prost = "0.13.2"
sha2 = "0.10.8"
tokio = {version = "1.40.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
