[package]
name = "chord_dht"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/node/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bytes = "1.7.1"
csv-async = { version = "1.3.0", features = ["tokio"] }
ethnum = "1.5.0"
futures = "0.3.30"
headers = "0.4.0"
itertools = "0.13.0"
petgraph = "0.6.5"
prost = "0.13.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.12.2"
